--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  align-items: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,7 +27,6 @@
 
 .App-link {
   color: #61dafb;
-  
 }
 
 @keyframes App-logo-spin {
